navbar collapsing correctly

--- a/src/main/frontend/src/App.css
+++ b/src/main/frontend/src/App.css
@@ -1,5 +1,9 @@
+html{
+margin-bottom:0;
+}
 .App {
   text-align: center;
+
 }
 
 .App-logo {
